Quorum/Library/Tests/TypeChecker/Pass/ExpAssignObjectBoolean.quorum
class Main
    action Main
        Object o        
        o = cast(Object, true)
        output "passed"
    end
end