Quorum/Library/Tests/TypeChecker/Fail/ExpAssignUndefinedObject.quorum
class Main
    action main
        Object x
        Object o
        o = cast(undefined, x)
    end
end
